5-nfh.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfhealthcheck
spec:
  selector:
    matchLabels:
      app: nfhealthcheck
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: nfhealthcheck
    spec:
      containers:
      - name: nfhealthcheck
        image: attilajak/nfhealthcheck:cloud
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nfhealthcheck-service

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: nfhealthcheck
  ports:
    - name: https
      port: 443
  type: ClusterIP
