5-nrfc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nrfc
spec:
  selector:
    matchLabels:
      app: nrfc
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: nrfc
    spec:
      containers:
      - name: nrfc
        image: attilajak/nrfc:cloud
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nrfc-service

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: nrfc
  ports:
    - name: https
      port: 443
  type: ClusterIP
