udsf-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udsf
spec:
  selector:
    matchLabels:
      app: udsf
  replicas: 2
  template: # template for the pods
    metadata:
      labels:
        app: udsf
    spec:
      containers:
      - name: udsf
        image: attilajak/udsf-app:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: udsf-service

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: udsf
  ports:
    - name: http
      port: 80
  type: LoadBalancer
