4-nrfc-istio-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: example.com
spec:
  hosts: 
  - example.com 
  endpoints:
  - address: 34.125.33.147
  ports: 
  - number: 80
    name: http-port 
    protocol: HTTP 
    targetPort: 443
  - number: 443
    name: https-port 
    protocol: HTTPS 
  resolution: STATIC
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3 
kind: DestinationRule 
metadata: 
  name: example.com 
spec: 
  host: example.com 
  trafficPolicy: 
    portLevelSettings: 
    - port: 
        number: 80 
      tls: 
        mode: SIMPLE
