7-sdl-istio-rules-http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: sbi-service
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "*" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
      - uri:  # IF
          prefix: "/nudr-dr"
      route:
      - destination:
          host: udr-service
    - match:
      - uri :
          prefix: "/nudsf-dr"
      route:
      - destination:
          host: udsf-service
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: udr
  namespace: default
spec:
  host: udr-service
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: udsf
  namespace: default
spec:
  host: udsf-service
